--- a/vqe_2q qwc.ipynb
+++ b/vqe_2q qwc.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cuda is not available!\n",
-      "logicqubit version 1.5.8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from logicqubit.logic import *\n",
     "from cmath import *\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +52,7 @@
        "       [ 0,  0,  0,  1]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +96,7 @@
        "(-2.23606797749979+0j)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -223,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,15 +279,13 @@
     "    \n",
     "    result = logicQuBit.Measure([q1,q2])\n",
     "    zx = expectation_value(result)\n",
-    "    zi = expectation_value(result, sig_zi)\n",
-    "    return zx, zi\n",
+    "    return zx\n",
     "\n",
     "def expectation_energy(params):\n",
     "    #xx =  sigma_xx(params)\n",
     "    #yy =  sigma_yy(params)\n",
     "    zz, iz, zi = sigma_zz(params)\n",
-    "    zx, zi = sigma_zx(params)\n",
-    "    zy = sigma_zx(params)\n",
+    "    zx = sigma_zx(params)\n",
     "\n",
     "    result = -zx + zi*2\n",
     "    return result"
@@ -304,35 +293,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " final_simplex: (array([[ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139],\n",
-      "       [ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139],\n",
-      "       [ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139],\n",
-      "       [ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139],\n",
-      "       [ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139],\n",
-      "       [ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139],\n",
-      "       [ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "        -1.89601139]]), array([-3., -3., -3., -3., -3., -3., -3.]))\n",
-      "           fun: -3.0000000000000013\n",
+      " final_simplex: (array([[ 0.37729988, -0.32129798,  0.33452791,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158],\n",
+      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158],\n",
+      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158],\n",
+      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158],\n",
+      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158],\n",
+      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158],\n",
+      "       [ 0.37729988, -0.32129798,  0.3345279 ,  2.38985834, -1.3110545 ,\n",
+      "         0.47596158]]), array([-2.23606798, -2.23606798, -2.23606798, -2.23606798, -2.23606798,\n",
+      "       -2.23606798, -2.23606798]))\n",
+      "           fun: -2.2360679774997907\n",
       "       message: 'Optimization terminated successfully.'\n",
-      "          nfev: 781\n",
-      "           nit: 443\n",
+      "          nfev: 591\n",
+      "           nit: 313\n",
       "        status: 0\n",
       "       success: True\n",
-      "             x: array([ 2.33667492, -0.80654829,  0.7874674 , -2.8748362 ,  0.55634138,\n",
-      "       -1.89601139])\n"
+      "             x: array([ 0.37729988, -0.32129798,  0.33452791,  2.38985834, -1.3110545 ,\n",
+      "        0.47596158])\n"
      ]
     }
    ],
@@ -343,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,37 +368,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.28249216443392\n",
-      "0.13968873911406765\n",
-      "0.07449573496384498\n",
-      "0.03561819761113505\n",
-      "0.017009135022420074\n",
-      "0.008289269456142612\n"
+      "2.977734310060142\n",
+      "0.14494446357487012\n",
+      "0.14747248710400607\n",
+      "0.03824243160315213\n",
+      "0.0003765805649342535\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2886/1088512639.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "/tmp/ipykernel_10578/1088512639.py:15: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  gradients[i] = expectation_right - expectation_left\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.004118625697719369\n",
-      "0.0020804823085976976\n",
-      "0.0010654092946490445\n",
-      "0.0005516774294618276\n"
      ]
     }
    ],
@@ -425,16 +404,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-2.9999998441205644+0j)"
+       "(-2.2360516529875394+0j)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
